# vc-research-experiments

./: .gitignore  CONTRIBUTING.md  README.md  add_graph.py  add_lcc.py  analyze.py  download.py  extract.py  graph_properties.py  main.py  notebook.ipynb  obtain_and_prepare_graph.py  parse.py  prepare.py  preprocess.py  preprocess_graph.py  pyproject.toml  read_graph.py  tabulate_data.py  tabulate_graph_properties.py  tabulate_results.py  utils.py
data/: properties_summary.tsv
data/598a/: properties.yaml
data/ABACUS_shell_hd/: properties.yaml
data/Andrews/: graph.edges
data/CL-100K-1d8-L9/: properties.yaml
data/COIL-DEL/: graph.edges  properties.yaml
data/COIL-DEL_lcc/: properties.yaml
data/Dubcova1/: graph.edges  properties.yaml
data/Pres_Poisson/: graph.edges
data/Reuters911/: graph.edges
data/Reuters911_lcc/: node_mapping.yaml  properties.yaml
data/SiO/: properties.yaml
data/TSOPF_FS_b162_c4/: properties.yaml
data/TSOPF_FS_b162_c4_lcc/: node_mapping.yaml
data/Trefethen_20000/: graph.edges
data/af23560/: properties.yaml
data/as-caida/: graph.edges
data/as-caida_lcc/: graph.edges
data/astro-ph_lcc/: graph.edges  node_mapping.yaml
data/bauru5727/: properties.yaml
data/bauru5727_lcc/: graph.edges
data/bayer01/: graph.edges
data/bayer04/: graph.edges  properties.yaml
data/bcsstk17/: graph.edges  properties.yaml
data/bcsstk17_lcc/: node_mapping.yaml  properties.yaml
data/bcsstk25/: properties.yaml
data/bcsstk25_lcc/: graph.edges  node_mapping.yaml  properties.yaml
data/bcsstk31/: properties.yaml
data/bcsstk31_lcc/: properties.yaml
data/bcsstk32/: properties.yaml
data/bcsstk35/: properties.yaml
data/bcsstm36_lcc/: graph.edges
data/bio-CE-CX/: properties.yaml
data/bio-CE-CX_lcc/: graph.edges
data/bio-CE-GT/: properties.yaml
data/bio-CE-GT_lcc/: graph.edges  node_mapping.yaml
data/bio-SC-TS/: graph.edges  properties.yaml
data/bio-WormNet-v3/: properties.yaml
data/blockqp1/: graph.edges  properties.yaml
data/bodyy6/: graph.edges  (+1 more)
results/: cvc_and_vc_vs_local_ratio_vc.tsv
(+479 files in other folders)
