#:schema https://json.schemastore.org/pyproject.json

[project]
name = "vc-research-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "scipy-stubs>=1.15.2.1",
    "types-networkx>=3.4.2.20250319",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "RUF",  # Ruff-specific rules
]
