#:schema https://json.schemastore.org/pyproject.json

[project]
name = "vc-research-experiments"
version = "0.1.0"
description = "Experiment data and scripts for preparing the data and running the experiments for the author’s vertex cover research project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "scipy-stubs>=1.15.2.1",
    "types-networkx>=3.4.2.20250319",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF", # Ruff-specific rules
]
